--- a/.config
+++ b/.config
@@ -2969,10 +2969,10 @@ CONFIG_PACKAGE_php7-mod-zip=y
 # CONFIG_PACKAGE_php7-pecl-http is not set
 # CONFIG_PACKAGE_php7-pecl-krb5 is not set
 # CONFIG_PACKAGE_php7-pecl-libevent is not set
-# CONFIG_PACKAGE_php7-pecl-mcrypt is not set
+CONFIG_PACKAGE_php7-pecl-mcrypt=y
 # CONFIG_PACKAGE_php7-pecl-propro is not set
 # CONFIG_PACKAGE_php7-pecl-raphf is not set
-# CONFIG_PACKAGE_php7-pecl-redis is not set
+CONFIG_PACKAGE_php7-pecl-redis=y
 # end of PHP
 
 #
@@ -3291,7 +3291,7 @@ CONFIG_PACKAGE_ruby-yaml=y
 #
 # CONFIG_PACKAGE_libbz2 is not set
 # CONFIG_PACKAGE_liblz4 is not set
-# CONFIG_PACKAGE_liblzma is not set
+CONFIG_PACKAGE_liblzma=y
 # CONFIG_PACKAGE_libunrar is not set
 CONFIG_PACKAGE_libzip-gnutls=y
 # CONFIG_PACKAGE_libzip-mbedtls is not set
@@ -4043,7 +4043,7 @@ CONFIG_PACKAGE_boost-system=y
 # CONFIG_PACKAGE_jsoncpp is not set
 # CONFIG_PACKAGE_knot-libs is not set
 # CONFIG_PACKAGE_knot-libzscanner is not set
-# CONFIG_PACKAGE_libaio is not set
+CONFIG_PACKAGE_libaio=y
 # CONFIG_PACKAGE_libantlr3c is not set
 # CONFIG_PACKAGE_libao is not set
 # CONFIG_PACKAGE_libapr is not set
@@ -4128,7 +4128,7 @@ CONFIG_PACKAGE_libdb47=y
 # CONFIG_PACKAGE_libdrm is not set
 # CONFIG_PACKAGE_libdw is not set
 # CONFIG_PACKAGE_libecdsautil is not set
-# CONFIG_PACKAGE_libedit is not set
+CONFIG_PACKAGE_libedit=y
 CONFIG_PACKAGE_libelf=y
 # CONFIG_PACKAGE_libesmtp is not set
 # CONFIG_PACKAGE_libestr is not set
@@ -4212,7 +4212,7 @@ CONFIG_PACKAGE_liblua5.3=y
 # CONFIG_PACKAGE_libmagic is not set
 # CONFIG_PACKAGE_libmaxminddb is not set
 # CONFIG_PACKAGE_libmbim is not set
-# CONFIG_PACKAGE_libmcrypt is not set
+CONFIG_PACKAGE_libmcrypt=y
 # CONFIG_PACKAGE_libmicrohttpd-no-ssl is not set
 # CONFIG_PACKAGE_libmicrohttpd-ssl is not set
 # CONFIG_PACKAGE_libmilter-sendmail is not set
@@ -4405,7 +4405,7 @@ CONFIG_PACKAGE_libuv=y
 # CONFIG_PACKAGE_libvpx is not set
 # CONFIG_PACKAGE_libwebcam is not set
 CONFIG_PACKAGE_libwebp=y
-# CONFIG_PACKAGE_libwebsockets-full is not set
+CONFIG_PACKAGE_libwebsockets-full=y
 # CONFIG_PACKAGE_libwebsockets-mbedtls is not set
 # CONFIG_PACKAGE_libwebsockets-openssl is not set
 # CONFIG_PACKAGE_libwrap is not set
@@ -4673,7 +4673,7 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
 # CONFIG_PACKAGE_luci-app-tinyproxy is not set
 # CONFIG_PACKAGE_luci-app-transmission is not set
 # CONFIG_PACKAGE_luci-app-travelmate is not set
-# CONFIG_PACKAGE_luci-app-ttyd is not set
+CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-udpxy is not set
 # CONFIG_PACKAGE_luci-app-uhttpd is not set
 CONFIG_PACKAGE_luci-app-unblockmusic=y
@@ -4880,6 +4880,7 @@ CONFIG_PACKAGE_luci-i18n-sfe-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-ssr-plus-zh_Hans is not set
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-unblockmusic-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-upnp-ca is not set
 # CONFIG_PACKAGE_luci-i18n-upnp-cs is not set
@@ -6311,7 +6312,36 @@ CONFIG_PACKAGE_unzip=y
 #
 # Database
 #
-# CONFIG_PACKAGE_mariadb-common is not set
+CONFIG_PACKAGE_mariadb-common=y
+CONFIG_PACKAGE_mariadb-client-base=y
+CONFIG_PACKAGE_mariadb-client=y
+# CONFIG_PACKAGE_mariadb-client-extra is not set
+CONFIG_PACKAGE_mariadb-server-base=y
+CONFIG_PACKAGE_mariadb-server=y
+# CONFIG_PACKAGE_mariadb-server-extra is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-auth-ed25519 is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-auth-gssapi is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-auth-pam is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-auth-pam-v1 is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-disks is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-feedback is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-file-key-management is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-ha-archive is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-ha-blackhole is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-ha-connect is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-ha-federated is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-ha-federatedx is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-ha-sphinx is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-ha-spider is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-handlersocket is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-locales is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-metadata-lock-info is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-query-cache-info is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-query-response-time is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-server-audit is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-simple-password-check is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-sql-errlog is not set
+# CONFIG_PACKAGE_mariadb-server-plugin-wsrep-info is not set
 # CONFIG_PACKAGE_pgsql-cli is not set
 # CONFIG_PACKAGE_pgsql-cli-extra is not set
 # CONFIG_PACKAGE_pgsql-server is not set
@@ -6486,7 +6516,7 @@ CONFIG_PACKAGE_bash=y
 # CONFIG_PACKAGE_setterm is not set
 # CONFIG_PACKAGE_tio is not set
 # CONFIG_PACKAGE_tmux is not set
-# CONFIG_PACKAGE_ttyd is not set
+CONFIG_PACKAGE_ttyd=y
 # CONFIG_PACKAGE_wall is not set
 # end of Terminal
 
