--- a/.config
+++ b/.config
@@ -2939,7 +2939,7 @@ CONFIG_PACKAGE_php7-mod-iconv=y
 CONFIG_PACKAGE_php7-mod-json=y
 # CONFIG_PACKAGE_php7-mod-ldap is not set
 CONFIG_PACKAGE_php7-mod-mbstring=y
-# CONFIG_PACKAGE_php7-mod-mysqli is not set
+CONFIG_PACKAGE_php7-mod-mysqli=y
 CONFIG_PACKAGE_php7-mod-mysqlnd=y
 CONFIG_PACKAGE_php7-mod-opcache=y
 # CONFIG_PACKAGE_php7-mod-openssl is not set
@@ -3322,10 +3322,10 @@ CONFIG_SQLITE3_RTREE=y
 # CONFIG_PACKAGE_pgsqlodbc is not set
 # CONFIG_PACKAGE_psqlodbca is not set
 # CONFIG_PACKAGE_psqlodbcw is not set
-# CONFIG_PACKAGE_redis-cli is not set
-# CONFIG_PACKAGE_redis-full is not set
-# CONFIG_PACKAGE_redis-server is not set
-# CONFIG_PACKAGE_redis-utils is not set
+CONFIG_PACKAGE_redis-cli=y
+CONFIG_PACKAGE_redis-full=y
+CONFIG_PACKAGE_redis-server=y
+CONFIG_PACKAGE_redis-utils=y
 # CONFIG_PACKAGE_tdb is not set
 # CONFIG_PACKAGE_unixodbc is not set
 # end of Database
